Enhance index.html with ad placements
Added multiple ad sections including header, native, and footer ads.

--- a/index.html
+++ b/index.html
@@ -1,30 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MyMovieStream</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-
+  <!-- 🔹 HEADER WITH BANNER AD -->
   <header class="site-header">
     <div class="brand">MyMovieStream</div>
-    <div id="header-ad" class="header-ad"></div>
+    <div id="header-ad" class="header-ad">
+      <!-- 🔸 Banner Ad -->
+      <script type="text/javascript">
+        atOptions = {
+          'key': '48d5b7b121b34aba54a436b8caa0621b',
+          'format': 'iframe',
+          'height': 60,
+          'width': 468,
+          'params': {}
+        };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/48d5b7b121b34aba54a436b8caa0621b/invoke.js"></script>
+    </div>
   </header>
 
-  <!-- ✅ Native Ad Moved Here (Top of Page) -->
-  <div id="native-ad-wrapper" class="native-ad-wrapper"></div>
+  <!-- 🔹 NATIVE AD (TOP OF PAGE) -->
+  <div id="native-ad-wrapper" class="native-ad-wrapper">
+    <script async="async" data-cfasync="false" src="//pl27884010.effectivegatecpm.com/a39e7461ca1bff2d0182cf39e690c516/invoke.js"></script>
+    <div id="container-a39e7461ca1bff2d0182cf39e690c516"></div>
+  </div>
 
   <main class="main">
+    <!-- 🔹 SEARCH SECTION -->
     <section class="controls">
-      <input id="search" type="search" placeholder="Search movies...">
+      <input id="search" type="search" placeholder="Search movies..." />
     </section>
 
+    <!-- 🔹 AD BELOW SEARCH -->
+    <div class="mid-banner">
+      <script type="text/javascript">
+        atOptions = {
+          'key': '48d5b7b121b34aba54a436b8caa0621b',
+          'format': 'iframe',
+          'height': 60,
+          'width': 468,
+          'params': {}
+        };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/48d5b7b121b34aba54a436b8caa0621b/invoke.js"></script>
+    </div>
+
+    <!-- 🔹 MOVIES GRID -->
     <section id="movies-grid" class="movies-grid"></section>
+
+    <!-- 🔹 AD BELOW MOVIE GRID -->
+    <div class="bottom-banner">
+      <script type="text/javascript">
+        atOptions = {
+          'key': '48d5b7b121b34aba54a436b8caa0621b',
+          'format': 'iframe',
+          'height': 60,
+          'width': 468,
+          'params': {}
+        };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/48d5b7b121b34aba54a436b8caa0621b/invoke.js"></script>
+    </div>
+
+    <!-- 🔹 EXTRA NATIVE AD (BOTTOM) -->
+    <div class="native-ad-wrapper">
+      <script async="async" data-cfasync="false" src="//pl27884010.effectivegatecpm.com/a39e7461ca1bff2d0182cf39e690c516/invoke.js"></script>
+      <div id="container-a39e7461ca1bff2d0182cf39e690c516"></div>
+    </div>
   </main>
 
+  <!-- 🔹 FOOTER WITH AD -->
   <footer class="site-footer">
+    <div class="footer-ad">
+      <script type="text/javascript">
+        atOptions = {
+          'key': '48d5b7b121b34aba54a436b8caa0621b',
+          'format': 'iframe',
+          'height': 60,
+          'width': 468,
+          'params': {}
+        };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/48d5b7b121b34aba54a436b8caa0621b/invoke.js"></script>
+    </div>
     <small>© <span id="year"></span> MyMovieStream</small>
   </footer>
 
